// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

package id;

message ProtoGlobalId {
    oneof kind {
        uint64 system = 1;
        uint64 user = 2;
        uint64 transient = 3;
        google.protobuf.Empty explain = 4;
    }
}

message ProtoId {
    oneof kind {
        ProtoGlobalId global = 1;
        ProtoLocalId local = 2;
    }
}

message ProtoLocalId {
    uint64 value = 1;
}

message ProtoPartitionId {
    oneof kind {
        int32 kafka = 1;
        google.protobuf.Empty none = 2;
    }
}
